--- a/CovidDataLake.MetadataIndexer/packages.config
+++ b/CovidDataLake.MetadataIndexer/packages.config
@@ -10,32 +10,32 @@
   <package id="log4net" version="2.0.10" targetFramework="net472" />
   <package id="log4net.Ext.Json" version="2.0.10.1" targetFramework="net472" />
   <package id="Maybe.NET" version="1.0.123" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.CommandLine" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="2.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Json" version="2.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Log4Net.AspNetCore" version="2.2.10" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="murmurhash" version="1.0.3" targetFramework="net472" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
   <package id="Pipelines.Sockets.Unofficial" version="2.1.16" targetFramework="net472" />
-  <package id="pythonnet" version="3.0.0-preview2022-01-03" targetFramework="net472" />
+  <package id="pythonnet" version="3.0.0-rc4" targetFramework="net472" />
   <package id="Sigil" version="4.7.0" targetFramework="net472" />
   <package id="StackExchange.Redis" version="2.1.58" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
@@ -71,18 +71,20 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net472" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="6.0.0" targetFramework="net472" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Channels" version="4.7.1" targetFramework="net472" />
