chore(content-indexer): removed old comments and updated configuration

--- a/CovidDataLake.ContentIndexer/appsettings.json
+++ b/CovidDataLake.ContentIndexer/appsettings.json
@@ -15,7 +15,7 @@
   "AmazonRootIndex": {
     "BucketName": "bucket",
     "RootIndexName": "root_index.txt",
-    "LockTimeSpanInSeconds": 10000000
+    "LockTimeSpanInSeconds": 300
   },
   "AmazonIndexFile": {
     "BucketName": "bucket"
@@ -27,8 +27,8 @@
     "MaxRowsPerFile": 1000
   },
   "RedisIndexCache": {
-    "LockDurationInSeconds": 10000000
-  },
+    "LockDurationInSeconds": 300
+    },
   "AmazonGeneralConfig": {
     "ServiceUrl": "aws_service_url"
   },
