refactor(metadata-extractor): moved to .net 6 and newer ikvm

--- a/CovidDataLake.MetadataIndexer/appsettings.json
+++ b/CovidDataLake.MetadataIndexer/appsettings.json
@@ -10,8 +10,11 @@
     "Topic": "covid-data-lake"
   },
   "MetadataExtraction": {
-    "IgnoreMetadataKeys": [ "X-Parsed-By", "FilePath" ] 
+    "IgnoreMetadataKeys": [ "X-Parsed-By", "FilePath" ]
   },
+  //HyperLogLog__BucketName
+  //HyperLogLog__BucketName
+  //AmazonIndexFile__BucketName
   "HyperLogLog": {
     "BucketName": "bucket",
     "LockIntervalInSeconds": 30
@@ -22,14 +25,14 @@
     "ErrorRate": 0.1,
     "Confidence": 0.9
   },
-  "AmazonIndexConfig": {
+  "AmazonIndexFile": {
     "BucketName": "bucket"
   },
   "AmazonGeneralConfig": {
     "ServiceUrl": "aws_service_url"
   },
   "BatchConfig": {
-    "BatchIntervalInSeconds": 5 
+    "BatchIntervalInSeconds": 5
   },
   "Redis": "localhost:6379"
 }
