perf(metadata-indexer): used another way to parse with Tika to reduce memory usage and time to get the metadata

--- a/CovidDataLake.MetadataIndexer/appsettings.json
+++ b/CovidDataLake.MetadataIndexer/appsettings.json
@@ -10,7 +10,7 @@
     "Topic": "covid-data-lake"
   },
   "MetadataExtraction": {
-    "IgnoreMetadataKeys": [ "X-Parsed-By", "FilePath" ]
+    "IgnoreMetadataKeys": [ "X-Parsed-By", "X-TIKA:Parsed-By", "FilePath" ]
   },
   //HyperLogLog__BucketName
   //HyperLogLog__BucketName
