refactor(common): converted to .net 6

--- a/CovidDataLake.MetadataIndexer/CovidDataLake.MetadataIndexer.csproj
+++ b/CovidDataLake.MetadataIndexer/CovidDataLake.MetadataIndexer.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CovidDataLake.Cloud\CovidDataLake.Cloud.csproj" />
+    <ProjectReference Include="..\CovidDataLake.Common\CovidDataLake.Common.csproj" />
     <ProjectReference Include="..\CovidDataLake.Pubsub\CovidDataLake.Pubsub.csproj" />
     <ProjectReference Include="..\CovidDataLake.Storage\CovidDataLake.Storage.csproj" />
   </ItemGroup>
