--- a/CovidDataLake.Cloud/CovidDataLake.Cloud.csproj
+++ b/CovidDataLake.Cloud/CovidDataLake.Cloud.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.7.9.49" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.9.58" />
   </ItemGroup>
 
   <ItemGroup>
