feat(scripts): added scripts mechanism to the project
This will allow maintaining the data and analyzing logs in the future

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,5 @@ Scripts/log.json
 Scripts/queries.csv
 
 CovidDataLake.MetadataIndexer/Properties/launchSettings.json
+
+CovidDatalake.Scripts/Properties/launchSettings.json
