--- a/CovidDatalake.Scripts/appsettings.json
+++ b/CovidDatalake.Scripts/appsettings.json
@@ -11,9 +11,7 @@
   "AmazonGeneralConfig": {
     "ServiceUrl": "aws_service_url"
   },
-  "RedisIndexCache": {
-    "LockDurationInSeconds": 10
-  },
+  "Redis": "localhost:6379,allowAdmin=true",
   "AmazonIndexFile": {
     "BucketName": "bucket"
   },
