--- a/CovidDataLake.Common/CovidDataLake.Common.csproj
+++ b/CovidDataLake.Common/CovidDataLake.Common.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.66" />
+    <PackageReference Include="System.Linq.Async.Queryable" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
