--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     image: docker.io/bitnami/redis:latest
     environment:
       - ALLOW_EMPTY_PASSWORD=yes # ALLOW_EMPTY_PASSWORD is recommended only for development.
+      - REDIS_EXTRA_FLAGS=--loglevel debug
     ports:
       - '6379:6379'
     volumes:
